# zlsx

./: .gitignore  LICENSE  README.md  build.zig  build.zig.zon
.github/workflows/: ci.yml  pypi.yml  release.yml
bindings/python/: README.md  pyproject.toml
bindings/python/tests/: test_basic.py
bindings/python/zlsx/: __init__.py  _ffi.py
docs/: benchmarks.md  jq-for-excel.md  vs_calamine.md  xlsx_test_corpus.md
include/: zlsx.h
packaging/homebrew/: zlsx.rb
scripts/: fetch_test_corpus.sh  install-hooks.sh  publish_homebrew_tap.sh
scripts/githooks/: pre-commit
src/: c_abi.zig  cli.zig  writer.zig  xlsx.zig
tests/: xlsx_corpus.zig
tests/bench/: Cargo.toml  bench_calamine.rs  bench_openpyxl.py  bench_pycalamine.py  bench_write_openpyxl.py  bench_write_xlsxwriter.py  bench_write_zlsx.zig  bench_zlsx.zig
