[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-zlsx"
version = "0.2.2"
description = "Python binding for zlsx — fast, read-mostly .xlsx library (Zig)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Laurent Fabre" }]
keywords = ["xlsx", "excel", "spreadsheet", "parser", "openpyxl-alternative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]

[project.urls]
Homepage = "https://github.com/laurentfabre/zlsx"
Repository = "https://github.com/laurentfabre/zlsx"
Issues = "https://github.com/laurentfabre/zlsx/issues"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["zlsx"]

[tool.hatch.build.targets.sdist]
include = ["zlsx/**", "tests/**", "README.md", "pyproject.toml"]
